--- a/app/src/main/res/layout/activity_info_aula.xml
+++ b/app/src/main/res/layout/activity_info_aula.xml
@@ -227,9 +227,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/button_layout"
+            android:background="@drawable/forma_griglia_gruppi"
             android:text="Avvisami quando si libera un posto"
-            android:textColor="@color/button_text"
             android:visibility="gone" />
 
         <Button
@@ -239,9 +238,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/button_layout"
+            android:background="@drawable/forma_griglia_gruppi"
             android:text="Prenota Posto"
-            android:textColor="@color/button_text"
             android:visibility="gone" />
 
         <Button
@@ -251,9 +249,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/button_layout"
+            android:background="@drawable/forma_griglia_gruppi"
             android:text="Prenota per Gruppo"
-            android:textColor="@color/button_text"
             android:visibility="gone" />
     </LinearLayout>
 
