--- a/app/src/main/res/layout/dialog_check_componenti.xml
+++ b/app/src/main/res/layout/dialog_check_componenti.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/grigio_chiaro"
-        android:text="Seleziona i componenti:" />
+        android:text="Seleziona i componenti:"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
     <ListView
         android:id="@+id/listaComponenti"
