--- a/app/src/main/res/layout/dialog_gestione_gruppo.xml
+++ b/app/src/main/res/layout/dialog_gestione_gruppo.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nomeGruppo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grigio_chiaro"
+        android:background="@color/colorPrimary"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="18sp" />
@@ -17,11 +17,31 @@
     <ListView
         android:id="@+id/listaStudenti"
         android:layout_width="match_parent"
-        android:layout_height="294dp"
+        android:layout_height="wrap_content"
         android:divider="@color/grigio_chiaro"
         android:dividerHeight="0.5dp">
 
     </ListView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/oreResidueDialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/dataScadenzaDialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -42,13 +62,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="textPersonName" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -58,19 +80,19 @@
             android:layout_weight="1"
             android:text="Nuova data di scadenza:" />
 
+        <Button
+            android:id="@+id/btnNuovaScadenza"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@android:drawable/ic_menu_month" />
+
         <TextView
             android:id="@+id/nuovaScadenza"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button" />
     </LinearLayout>
 
     <LinearLayout
@@ -85,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/forma_griglia_gruppi"
             android:text="OK" />
 
         <Button
@@ -92,6 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/forma_griglia_gruppi"
             android:text="ANULLA" />
     </LinearLayout>
 
