--- a/app/src/main/res/layout/dialog_scegli_gruppo.xml
+++ b/app/src/main/res/layout/dialog_scegli_gruppo.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/grigio_chiaro"
-        android:text="Seleziona il gruppo per cui vuoi prenotare:" />
+        android:text="Seleziona il gruppo per cui vuoi prenotare:"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
     <GridView
         android:id="@+id/grigliaGruppi"
@@ -30,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/forma_griglia_gruppi"
         android:text="Annulla" />
 
 </LinearLayout>
