--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -183,12 +183,21 @@
             </TableRow>
         </TableLayout>
 
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal"
+            android:text="Matricola ed e-mail devono essere dell'Università di appartenenza"
+            android:textSize="12sp" />
+
         <Button
             android:id="@+id/btn_registrazione"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
             android:background="@drawable/button_layout"
             android:text="Registrati"
             android:textColor="@color/bianco" />
