--- a/app/src/main/res/layout/activity_info_aula.xml
+++ b/app/src/main/res/layout/activity_info_aula.xml
@@ -227,8 +227,9 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/forma_griglia_gruppi"
+            android:background="@drawable/button_layout"
             android:text="Avvisami quando si libera un posto"
+            android:textColor="@color/button_text"
             android:visibility="gone" />
 
         <Button
@@ -238,8 +239,9 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/forma_griglia_gruppi"
+            android:background="@drawable/button_layout"
             android:text="Prenota Posto"
+            android:textColor="@color/button_text"
             android:visibility="gone" />
 
         <Button
@@ -249,8 +251,9 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/forma_griglia_gruppi"
+            android:background="@drawable/button_layout"
             android:text="Prenota per Gruppo"
+            android:textColor="@color/button_text"
             android:visibility="gone" />
     </LinearLayout>
 
