--- a/app/src/main/res/drawable/button_color_clicked.xml
+++ b/app/src/main/res/drawable/button_color_clicked.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#505050" />
+        android:color="#405048" />
     <corners
         android:radius="7dp" />
 
@@ -13,5 +13,5 @@
         android:bottom="1dp"/>
 
     <solid
-        android:color="#505050" />
+        android:color="#91C8AD" />
 </shape>
