--- a/app/src/main/res/drawable/button_color_default.xml
+++ b/app/src/main/res/drawable/button_color_default.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#8B7A7A7A" />
+        android:color="#405048" />
     <corners
         android:radius="7dp" />
 
@@ -13,6 +13,6 @@
         android:bottom="1dp"/>
 
     <solid
-        android:color="#8B7A7A7A" />
+        android:color="#B5DFCA" />
 
 </shape>
