--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#19bf6f</color>
-    <color name="colorPrimaryDark">#0E8E50</color>
-    <color name="colorAccent">#20e887</color>
-    <color name="intestazione">#19BF6F</color>
-    <color name="button_text">#FFFFFF</color>
+    <color name="colorPrimary">#4ABC84</color>
+    <color name="colorPrimaryDark">#387758</color>
+    <color name="colorAccent">#78FFBD</color>
+    <color name="intestazione">#4ABC84</color>
+    <color name="button_text">#224734</color>
     <color name="verde_trasparente">#bfe3c3</color>
     <color name="grigio_chiaro">#E3E5E6</color>
     <color name="bianco">#FFFFFF</color>
