--- a/app/src/main/res/layout/toast_success.xml
+++ b/app/src/main/res/layout/toast_success.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:textColor="@color/button_text"
+        android:textColor="@color/bianco"
         android:textSize="16sp"
         android:textStyle="bold" />
 </LinearLayout>
