--- a/app/src/main/res/layout/row_layout_group_activity.xml
+++ b/app/src/main/res/layout/row_layout_group_activity.xml
@@ -5,6 +5,8 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:background="@drawable/layout_gruppo_complete"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -41,11 +43,6 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
 
-        <TextView
-            android:id="@+id/oreDisp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
     </LinearLayout>
 
 </LinearLayout>
