--- a/app/src/main/res/layout/row_layout_group_activity.xml
+++ b/app/src/main/res/layout/row_layout_group_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:background="@drawable/layout_gruppo_complete"
     android:orientation="horizontal">
@@ -24,7 +24,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_weight="1"
@@ -34,14 +34,12 @@
             android:id="@+id/nomeGrup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/codGrup"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
