--- a/app/src/main/res/layout/activity_prenotazione_studente.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente.xml
@@ -66,6 +66,7 @@
                             android:layout_height="match_parent"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="10dp"
+                            android:background="@drawable/forma_dialog"
                             android:visibility="gone">
 
                                 <TableRow
@@ -83,7 +84,8 @@
                                             android:id="@+id/pren_et_data"
                                             android:layout_width="wrap_content"
                                             android:layout_height="match_parent"
-                                            android:textSize="16sp" />
+                                            android:textSize="16sp"
+                                            android:textStyle="bold" />
                                 </TableRow>
 
                                 <TableRow
@@ -102,7 +104,8 @@
                                             android:id="@+id/pren_et_inizio"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:textSize="16sp" />
+                                            android:textSize="16sp"
+                                            android:textStyle="bold" />
                                 </TableRow>
 
                                 <TableRow
@@ -120,7 +123,8 @@
                                             android:id="@+id/pren_et_fine"
                                             android:layout_width="wrap_content"
                                             android:layout_height="match_parent"
-                                            android:textSize="16sp" />
+                                            android:textSize="16sp"
+                                            android:textStyle="bold" />
                                 </TableRow>
 
                         </TableLayout>
