--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -200,7 +200,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/button_layout"
             android:text="Registrati"
-            android:textColor="@color/bianco" />
+            android:textColor="@color/button_text" />
 
     </LinearLayout>
 </ScrollView>
