--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,9 @@
             android:id="@+id/log_toRegistrazione"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal" />
+            android:layout_marginTop="5dp"
+            android:gravity="center_horizontal"
+            android:textColorLink="#359739" />
 
     </LinearLayout>
 </ScrollView>
