--- a/app/src/main/res/layout/dialog_crea_pdf.xml
+++ b/app/src/main/res/layout/dialog_crea_pdf.xml
@@ -19,11 +19,28 @@
         android:layout_gravity="center"
         android:text="Vuoi scaricare un Pdf\ncon i codici appena creati?" />
 
-    <Button
-        android:id="@+id/btnDialogPdf"
-        android:layout_width="40dp"
-        android:layout_height="31dp"
-        android:layout_gravity="center"
-        android:background="@android:drawable/stat_sys_download_done"
-        android:textColor="#FFFFFF" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnDialogPdfAnnulla"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:layout_gravity="left"
+            android:layout_weight="1"
+            android:text="Annulla"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/btnDialogPdf"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:text="Scarica"
+            android:textSize="8sp" />
+
+    </LinearLayout>
 </LinearLayout>
