--- a/app/src/main/res/layout/row_layout_home_docente.xml
+++ b/app/src/main/res/layout/row_layout_home_docente.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bianco"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/infoCorso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/forma_griglia_gruppi"
         android:textSize="20sp" />
 </LinearLayout>
