--- a/app/src/main/res/layout/activity_prenotazione_studente_aula_gruppo.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente_aula_gruppo.xml
@@ -127,6 +127,15 @@
 
             </TableLayout>
 
+            <TextView
+                android:id="@+id/txt_er_studgruppo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textColor="#FF0000"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -139,4 +148,11 @@
         android:background="@drawable/button_layout"
         android:text="Conferma"
         android:textColor="@color/button_text" />
+
+    <TextView
+        android:id="@+id/txt_prova_gr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </LinearLayout>
