--- a/app/src/main/res/layout/activity_prenotazioni_attive.xml
+++ b/app/src/main/res/layout/activity_prenotazioni_attive.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:alpha="100"
-            android:divider="@color/bianco"
+            android:divider="#FAFAFA"
             android:dividerHeight="10dp"
             android:footerDividersEnabled="false"
             android:headerDividersEnabled="false" />
@@ -47,7 +47,9 @@
         <ListView
             android:id="@+id/list_cronologia"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:divider="#FAFAFA"
+            android:dividerHeight="10dp"/>
     </LinearLayout>
 </LinearLayout>
 
