--- a/app/src/main/res/drawable/button_color_default.xml
+++ b/app/src/main/res/drawable/button_color_default.xml
@@ -13,6 +13,6 @@
         android:bottom="1dp"/>
 
     <solid
-        android:color="#B5DFCA" />
+        android:color="@color/colorPrimaryChiaro" />
 
 </shape>
