--- a/app/src/main/res/layout/dialog_scegli_gruppo.xml
+++ b/app/src/main/res/layout/dialog_scegli_gruppo.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/forma_griglia_gruppi"
+        android:background="@drawable/button_layout"
         android:text="Annulla" />
 
 </LinearLayout>
