--- a/app/src/main/res/layout/activity_home_docente.xml
+++ b/app/src/main/res/layout/activity_home_docente.xml
@@ -28,8 +28,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/forma_griglia_gruppi"
-        android:text="crea gruppi" />
+        android:background="@drawable/button_layout"
+        android:text="CREA GRUPPI" />
 </LinearLayout>
