--- a/app/src/main/res/layout/dialog_crea_pdf.xml
+++ b/app/src/main/res/layout/dialog_crea_pdf.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@color/bianco"
     android:orientation="vertical">
 
     <TextView
@@ -30,6 +30,7 @@
             android:layout_height="30dp"
             android:layout_gravity="left"
             android:layout_weight="1"
+            android:background="@drawable/button_layout"
             android:text="Annulla"
             android:textSize="8sp" />
 
@@ -39,6 +40,7 @@
             android:layout_height="30dp"
             android:layout_gravity="right"
             android:layout_weight="1"
+            android:background="@drawable/button_layout"
             android:text="Scarica"
             android:textSize="8sp" />
 
