--- a/app/src/main/res/layout/dialog_dettagli_gruppo.xml
+++ b/app/src/main/res/layout/dialog_dettagli_gruppo.xml
@@ -115,5 +115,6 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/button_layout"
         android:text="@android:string/ok" />
 </LinearLayout>
