--- a/app/src/main/res/layout/dialog_errore_gruppi.xml
+++ b/app/src/main/res/layout/dialog_errore_gruppi.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/button_layout"
             android:text="HOME" />
 
         <Button
@@ -37,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/button_layout"
             android:text="ISCRIVITI" />
     </LinearLayout>
 
